feat: proper api and db setup, complete auth routes
